# fantasy-football-keeper-optimizer

./: .env.example  .gitignore  README.md  ai_backed_upgrades_implementation_plan.md  authentication_and_multi_user_plan.md  docker-compose.yml  draftsharks_adp_scrape_status.md  fantasy_keeper_app_build_plan.md  in_season_tools_plan.md  mockdraft_implementation_plan.md  next_level_enhancements_plan.md  package-lock.json  package.json  railway_deployment_plan.md  ui_modernization_plan.md
apps/api/: .env.example  Dockerfile  alembic.ini  backfill_player_images.py  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260521_0001_initial_schema.py  20260521_0002_drop_legacy_user_password.py  20260521_0003_add_user_alias.py  20260522_0004_add_league_countdown_dates.py  20260524_0004_add_mock_drafts.py  20260525_0005_add_adp_refresh_candidates.py  20260526_0006_add_mock_draft_strategy_plan.py  20260527_0007_add_ai_explanation.py  20260528_0008_add_ai_request_log.py  20260529_0009_multi_league_platform_admin.py  20260530_0010_add_yahoo_oauth_tokens.py  20260531_0011_add_owner_name_index.py  20260602_0012_add_keeper_outcomes.py  20260602_0013_add_final_keeper_selections.py  20260602_0014_add_was_kept_to_keeper_outcomes.py  20260602_0015_add_commissioner_fields_to_leagues.py  20260604_0016_add_auction_draft_mode.py  20260604_0017_add_player_birth_date.py  20260604_0018_add_player_image_url.py  20260608_0019_add_adp_lock_date_to_leagues.py  (+10 more)
apps/api/app/: __init__.py  main.py
apps/api/tests/: test_optimizer.py  test_optimizer_api.py
(+116 files in other folders)
