[project]
name = "keeper-optimizer-api"
version = "0.1.0"
description = "FastAPI backend for the fantasy football keeper optimizer."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "openpyxl>=3.1.5",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.7.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
